# merge_selection_sort

./: .gitignore  CMakeLists.txt  README.md  create_plot.py  main.c  output1.cvs  output2.cvs  output3.cvs
include/: array.h  is_sorted.h  merge_sort.h  selection_sort.h
input/: generate_input_data.py  input1.txt  input2.txt  input3.txt
output/: output1.csv  output2.csv  output3.csv
source/: array.c  merge_sort.c  selection_sort.c
